2013-11-17  Hirochika Asai  <asai@scyphus.co.jp>

    * las/mvector.c: Added, a set of functions to implement mutable vector
    * las/mvector.h: Added this file with mvector/mvector.c

    * las/parser.h: Added


2013-11-16  Hirochika Asai  <asai@scyphus.co.jp>

    * las/vector.c: Added `const' modifier to the argument of vector_max_size()
    * las/vector.h: Added `const' modifier to the argument of vector_max_size()
    * las/parser.c: Added
    * las/expr.c: Moved parser functions to parser.c
    * las/expr.h: Moved parser functions to parser.c
    * las/las.h: Removed ineffective code


2013-11-12  Hirochika Asai  <asai@scyphus.co.jp>

    * las/expr.c: Fixed a bug that the parser did not eat the token of integers
    * las/expr.h: Added, definitions of structures etc. have been moved from
                  las/expr.c
    * las/las.h: Changed the definition of register/symbol structure


2013-11-10  Hirochika Asai  <asai@scyphus.co.jp>

    * las/expr.c: Added, a set of parser functions

    * las/hashtable.c: Removed exit() and changed the order of arguments
    * las/hashtable.h: Changed the order of arguments

    * las/token.h: Added several new tokens
    * las/tokenizer.c: Added several new tokens
    * las/las.h: Added several new tokens


2013-11-08  Hirochika Asai  <asai@scyphus.co.jp>

    * las/assembler.c: Added

    * las/checkint.c: Added, a set of functions to check the size of variables
    * las/checkint.h: Added, the header file of checkint.c

    * las/vector.c: Added, vector utility
    * las/vector.h: Added

    * las/hashtable.c: Added, hash table utility
    * las/hashtable.h: Added

    * las/token.h: Added TOK_SEMICOLON
    * las/tokenizer.c: Added TOK_SEMICOLON, and fixed a bug on the termination
                       of the token value
    * las/las.c: Added a function call of assemble()
    * las/las.h: Added several structures for assembler


2013-11-07  Hirochika Asai  <asai@scyphus.co.jp>

    * Makefile.am: Added